--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@ keywords:       Awesome, website, keywords
               <source src="http://gouwestad.com/lex/basis/_site/img/coast.webm" type='video/webm' />
               <source src="http://gouwestad.com/lex/basis/_site/img/coast.ogv" type='video/ogg' />
         </video>
-        <div class="vert-center">
+        <div class="row">
             <div class="col-12 text-center">
                 <div class="jumbotron" data-200="opacity: 1; margin-top: 0%;" data-800="opacity: 0; margin-top: -20%;">
-                    <h6>Vertel je verhaal</h6>
-                    <h1><small>wij maken er een </small><br>belevenis van</h1>
-                    <p><a href="#intro" data-menu-top="1800" class="btn btn-primary btn-large">websites die iets betekenen</a></p>
+                    <img src="{{ site.url }}/img/logo-notext.png">
+                    <h1><strong>Coast</strong></h1>
+                    <h5>websites die verkopen</h5>
+                    <p><a href="#intro" data-menu-top="1800" class="btn btn-primary btn-large">een nieuwe manier om je online te presenteren</a></p>
                 </div>
             </div>
         </div>
@@ -40,26 +41,37 @@ keywords:       Awesome, website, keywords
         </div>
     </section> 
 
-    <section class="intro" id="intro" data-1000="top:100%;" data-1800="top: 0%;" data-2000="opacity:1" data-2600="opacity:0">
+    <section class="intro" id="intro" data-1000="top:100%;" data-1200="background-position: 120% 0;" data-1800="top: 0%;" data-1900="background-position: 100% 0;" data-2100="opacity:1;" data-2600="opacity:0; top:0%; background-position: 120% 0;" data-2602="top:-100%;" >
         <div class="container">
             <div class="vert-center">
-                <div class="row story-width text-center">
-                    <div class="col-12">
+                <div class="row text-center">
+                    <div class="col-10">
                         <h4><small>Het gaat niet om de grootte van je <strong>Adwords</strong> budget...</small><br></h4>
                     </div>
-                    <div class="col-12">
+                    <div class="col-10">
                          <h4>Het gaat om je <em>idee</em> en hoe goed je het presenteert.</h4>
                     </div>
-                    <div class="col-12">
-                        <p>Een website is niet anders dan ieder ander medium. Je kunt het beste idee van de wereld hebben, als mensen het niet voelen, dan verkoopt het niet.</p>
+                    <div class="col-10">
+                        <p>Coast websites zijn de nieuwe standaard op webgebied. Volwaardige online campagnes, die bezoekers enthousiasmeren en tot actie over laten gaan.
+                            De eigenschappen?
+                        </p>
+                    </div>
+                    <div class="col-10">
+                        <ul>
+                            <li><a href="#focus">Focus</a> op wat belangrijk is.</li>
+                            <li>Custom <a href="#design">design</a> van de hoogste kwaliteit.</li>
+                            <li>Aandacht voor de <a href="#resultaat">resultaten.</a></li>
+                            <li>De allernieuwste <a href="#techniek">technieken</a> om je verhaal tot leven te laten komen.</li>
+                            <li>Ow ja, het is nog <a href="#kosten">betaalbaar</a> ook.</li>
+                            <li>Of geloof je het allemaal wel, dan kun je hier bestellen</li>
+                        </ul>
 
-                         <p>Met Smartsites vertellen we je verhaal door een unieke interactieve ervaring te creëren. Geen generieke website templates, met een saaie lap tekst, maar een ervaring die je bezoekers zal plezieren en je merk of product in hun gedachten zal houden.
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 text-center">
-                        <a href="#focus" data-menu-top="2600" class="btn btn-large btn-primary">you have to focus..</a>
+                        <a href="#focus" data-menu-top="2600" class="btn btn-large btn-primary">leg de focus op je verhaal</a>
                     </div>
                 </div>
             </div>
@@ -70,93 +82,10 @@ keywords:       Awesome, website, keywords
 
     {% include design.html %}
 
+    {% include showcase.html %}
+
     
 
-
-   <!-- <section class="responsive-showcase" id="special">
-        <div class="overlay">
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <h1>Responsive is uit</h1> 
-                    <h3>Wij noemen het <strong>Responsive++</strong></h3>
-                </div>
-            </div>
-        </div>
-        <div class="flexslider">
-          <ul class="slides">
-            <li class="showcase-devices">
-                <div class="container"> 
-                    <div class="row vert-box">
-                        <div class="col-7 responsive-design"> 
-                            <img class="desktop" src="img/responsive/desktop.png">
-                            <img class="laptop" src="img/responsive/laptop.png">
-                            <img class="tablet" src="img/responsive/tablet.png">
-                            <img class="tablet-mini" src="img/responsive/tablet-mini.png">
-                            <img class="phone" src="img/responsive/phone.png">
-                        </div>
-                        <div class="col-5 vert-middle">
-                            <h6>Responsive is standaard</h6>
-                            <p>Alle websites worden responsive opgeleverd, met enkele toevoegingen waardoor het nog beter werkt.</p>
-                            <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup btn-animated"><i class="icon-desktop"></i> <span>Test het</span></button></a>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="showcase-dekstop">
-                <div class="container"> 
-                    <div class="col-7 responsive-design"> 
-                        <img src="img/desktop.png">
-                    </div>
-                    <div class="col-5">
-                        <h6>Desktop</h6>
-                        <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
-                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
-                    </div>
-                </div>
-            </li>
-            <li class="showcase-laptop">
-                <div class="container"> 
-                    <div class="col-7 responsive-design"> 
-                        <img src="img/laptop.png">
-                    </div>
-                    <div class="col-5">
-                        <h6>Laptop</h6>
-                        <p>Ook laptops varieren tegenwoordig van zakformaat 11 inch tot 19 inch. </p>
-                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
-                    </div>
-                </div>
-            </li>
-            <li class="showcase-mobile">
-                <div class="container"> 
-                    <div class="col-7 responsive-design"> 
-                        <img src="img/tablet.png">
-                        <img src="img/tablet-mini.png">
-                        <img src="img/phone.png">
-                    </div>
-                    <div class="col-5">
-                        <h6>Mobiel</h6>
-                        <p>Naast de 'gewone' tablets zijn er ook 7 inch tablets, en een batterij aan verschillende telefoonschermen</p>
-                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
-                    </div>
-                </div>
-            </li>
-          </ul>
-        </div>
-    </section>
-    <div class="row">
-        <div class="col-12 nav-showcase">
-        <div class="nav-showcase">
-            <ul class="nav nav-pills">
-                <li><a>Kies een device: </a></li>
-                <li><a href="#" id="slide-desktop-btn">Desktop <i class="icon-desktop"></i></a></li>
-                <li><a href="#" id="slide-laptop-btn">Laptop <i class="icon-laptop"></i></a></li>
-                <li><a href="#" id="slide-mobile-btn">Mobiel <i class="icon-tablet"></i> <i class="icon-mobile-phone"></i></a></li>
-            </ul>
-        </div>
-    </div>
-    </div>-->
 
 
 
