--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description:    Wow this really is an awesome website
 keywords:       Awesome, website, keywords
 ---
 
-    <header data-400="top:0%;" data-1000="top:-100%">
+    <header data-400="transform[swing]: scale(1); opacity:1;" data-1000="transform: scale(3); opacity:0; top: 0%;" data-1001="top:-300%;">
         <video id="example_video_1" class="full-video visible-lg" 
             poster="http://video-js.zencoder.com/oceans-clip.png"
             data-setup='{"autoplay": true, "controls": false, "loop": true}'>
@@ -16,7 +16,7 @@ keywords:       Awesome, website, keywords
         </video>
         <div class="row">
             <div class="col-12 text-center">
-                <div class="jumbotron" data-200="opacity: 1; margin-top: 0%;" data-800="opacity: 0; margin-top: -20%;">
+                <div class="jumbotron" data-50="opacity: 1; margin-top: 0%;" data-1000="margin-top: -50%;">
                     <img src="{{ site.url }}/img/logo-notext.png">
                     <h1>A new online <strong>Exposure</strong></h1>
                     <h5>websites die verkopen</h5>
@@ -26,10 +26,10 @@ keywords:       Awesome, website, keywords
         </div>
     </header>
 
-  <section class="coast" data-1800="top:0%;" data-1801="top:-100%">
+  <section class="coast" data-2000="top:0%;" data-2001="top:-100%">
         <div class="container">
             <div class="vert-center">
-                <div class="row story-width">
+                <div class="row story-width" data-600="opacity:0;" data-1000="transform: scale(1); opacity:1;" data-1900="transform: scale(3); opacity:0;" >
                     <div class="col-6 col-offset-3 text-center">
                         <img src="{{site.url}}/img/logo.png">
                     </div>
@@ -41,26 +41,26 @@ keywords:       Awesome, website, keywords
         </div>
     </section> 
 
-    <section class="intro" id="intro" data-1000="top:100%;" data-1200="background-position: 120% 0;" data-1800="top: 0%;" data-1900="background-position: 100% 0;" data-2100="opacity:1;" data-2600="opacity:0; top:0%; background-position: 120% 0;" data-2602="top:-100%;" >
+    <section class="intro" id="intro" data-1000="top:100%;" data-1200="background-position: 120% 0;" data-1950="top: 0%;" data-2000="background-position: 100% 0;" data-2200="opacity:1;" data-2600="opacity:0; top:0%; background-position: 120% 0;" data-2602="top:-100%;" >
         <div class="container">
             <div class="vert-center">
                 <div class="row text-center">
                     <div class="col-12 col-sm-8">
-                        <h4><small>Het gaat niet om de grootte van je <strong>Adwords</strong> budget...</small><br></h4>
+                        <h4 data-1600="opacity:0; top:20%" data-1750="opacity:1; top: 0%;"><small>Het gaat niet om de grootte van je <strong>Adwords</strong> budget...</small><br></h4>
                     </div>
                     <div class="col-12 col-sm-8">
-                         <h4>Het gaat om je <em>idee</em> en hoe goed je het presenteert.</h4>
+                         <h3 data-1650="opacity:0; top:20%" data-1800="opacity:1; top: 0%;">Het gaat om je <em>idee</em> en hoe goed je het presenteert.</h3>
                     </div>
-                    <div class="col-12 col-sm-8">
-                        <p>Coast websites zijn de nieuwe standaard op webgebied. Volwaardige online campagnes, die bezoekers enthousiasmeren en tot actie over laten gaan.
-                            De eigenschappen?</p>
-                          <p>Coast websites zijn <a href"#focus">gefocust</a>, met de hand <a href="#design">ontworpen</a>, ontwikkeld met de allerlaatste <a href="#techniek">webtechnieken</a> en ook nog eens <a href="#betaalbaar">betaalbaar</a>.
+                    <div class="col-12 col-sm-8" data-1550="opacity:0; top:20%" data-1900="opacity:1; top: 0%;">
+                        <p>COAST vertelt je verhaal en biedt je bezoekers een unieke online ervaring die ze raakt en inspireert. De manier om je bedrijf, product of dienst te presenteren op een manier die wel resultaat oplevert.</p>
+                            <p><strong>De eigenschappen?</strong></p>
+                          <p data-1550="opacity:0; top:20%" data-1900="opacity:1; top: 0%;">Coast websites zijn <a href"#focus">gefocust</a> op wat belangrijk is , met de hand <a href="#design">ontworpen</a>, ontwikkeld met de allerlaatste <a href="#techniek">webtechnieken</a> en ook nog eens <a href="#betaalbaar">betaalbaar</a>.
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <a href="#focus" data-menu-top="2600"><i class="icon-arrow-down"></i> scroll verder en lees hoe gefocust Coast is</a>
+                        <a href="#focus" data-menu-top="2600"><i class="icon-arrow-down"></i> scroll verder en lees waarom COAST is wat het is</a>
                     </div>
                 </div>
             </div>
